--- a/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
@@ -4,11 +4,10 @@
     - 2.1 学习方式
     - 2.2 实战必备
 - 03.简单实践操作
-    - 3.1 第一步依赖相关库
-    - 3.2 第二步创建navigation导航
-    - 3.3 第三步建立NavHostFragment
-    - 3.4 第四步界面跳转和传参
-- 04.Navigation原理
+    - 3.1 最关键的三要素
+    - 3.2 举个通俗案例
+    - 3.3 关键的步骤流程
+- 04.Navigation深度理解
     - 4.1 Navigation架构图
     - 4.2 Navigation源码UML
     - 4.3 
@@ -29,9 +28,11 @@
 ### 02.Navigation实战必备
 #### 2.1 学习方式
 - 最好的学习方式仍然是通过官方文档，下面是官方的学习地址：
-- 谷歌官方教程：[Navigation Codelab](https://codelabs.developers.google.com/codelabs/android-navigation/#0)
-- 谷歌官方文档：[Navigation](https://developer.android.com/guide/navigation/)
-- 官方Demo：[Demo地址](https://github.com/googlecodelabs/android-navigation)
+    - 谷歌官方教程：[Navigation Codelab](https://codelabs.developers.google.com/codelabs/android-navigation/#0)
+    - 谷歌官方文档：[Navigation](https://developer.android.com/guide/navigation/)
+    - 官方Demo：[Demo地址](https://github.com/googlecodelabs/android-navigation)
+- 这个教程Demo的优势
+    - 官方为这个Demo提供了 **一系列详细的教程**，通过一步步，引导学习每一个类或者组件的应用场景，最终完全上手 **Navigation**。
 
 
 ### 03.Navigation实战必备
@@ -50,31 +51,14 @@
 - Navigation Graph中可以看出各个地点（Destination）和通往各个地点的路径，NavHostFragment可以到达地图中的各个目的地，但是决定到什么目的地还是方向盘NavController，虽然它取决于开车人（用户）。
 
 
-#### 3.1 第一步依赖相关库
-
-
-#### 3.2 第二步创建navigation导航
-- 创建基础目录：
+#### 3.3 关键的步骤流程
+- 第一步依赖相关库
+    - 直接依赖即可
+- 第二步创建navigation导航
     - 资源文件res目录下创建navigation目录 -> 右击navigation目录New一个Navigation resource file
-    - 创建一个Destination，如果说navigation是我们的导航工具，Destination是我们的目的地，在此之前，我已经写好了一个WelcomeFragment、LoginFragment和RegisterFragment，添加Destination的操作完成。
-- 除了可视化界面之外，我们仍然有必要看一下里面的内容组成，login_navigation.xml:
-    ```
-    <navigation
-        android:id="@+id/login_navigation"
-        app:startDestination="@id/welcome">
-    
-        <fragment
-            android:id="@+id/welcome">
-        </fragment>
-    
-    </navigation>
-    ```
-- 看一下navigation标签的属性：
-    - app:startDestination	默认的起始位置
-
-
-#### 3.3 第三步建立NavHostFragment
-- 创建一个新的LoginActivity，在activity_login.xml文件中：
+    - 创建一个Destination，如果说navigation是我们的导航工具，Destination是我们的目的地
+- 第三步建立NavHostFragment
+    - 创建一个布局文件，需要是fragment，
     ```
     <androidx.constraintlayout.widget.ConstraintLayout
         ...>
@@ -89,73 +73,20 @@
     
     </androidx.constraintlayout.widget.ConstraintLayout>
     ```
-- 有几个属性需要解释一下：
-    - android:name	
-        - 值必须是androidx.navigation.fragment.NavHostFragment，声明这是一个NavHostFragment
-    - app:navGraph	
-        - 存放的是第二步建好导航的资源文件，也就是确定了Navigation Graph
-    - app:defaultNavHost="true"	
-        - 与系统的返回按钮相关联
+    - android:name	：值必须是androidx.navigation.fragment.NavHostFragment，声明这是一个NavHostFragment
+    - app:navGraph	：存放的是第二步建好导航的资源文件，也就是确定了Navigation Graph
+    - app:defaultNavHost="true"	：与系统的返回按钮相关联
+- 第四步界面跳转和传参
+    - 方式一 利用ID导航：findNavController().navigate(R.id.login, bundle,navOption)
+    - 方式二 利用Safe Args：
 
-
-#### 3.4 第四步界面跳转和传参
-- 在WelcomeFragment中，点击登录和注册按钮可以分别跳转到LoginFragment和RegisterFragment中。
-- 方式一 利用ID导航
-    - 目标：WelcomeFragment携带key为name的数据跳转到LoginFragment，LoginFragment接收后显示。
-    ```
-    btnLogin.setOnClickListener {
-        // 设置动画参数
-        val navOption = navOptions {
-            anim {
-                enter = R.anim.slide_in_right
-                exit = R.anim.slide_out_left
-                popEnter = R.anim.slide_in_left
-                popExit = R.anim.slide_out_right
-            }
-        }
-        // 参数设置
-        val bundle = Bundle()
-        bundle.putString("name","TeaOf")
-        findNavController().navigate(R.id.login, bundle,navOption)
-    }
-    ```
-    - LoginFragment的接收代码比较简单，直接获取Fragment中的Bundle即可，这里不再出示代码。
-- 方式二 利用Safe Args
-    - 目标：WelcomeFragment通过Safe Args将数据传到RegisterFragment，RegisterFragment接收后显示。
-    - 看一下已经展示过的login_navigation.xml：
-    ```
-    <navigation>
-        <fragment
-            android:id="@+id/welcome">
-            <action
-                android:id="@+id/action_welcome_to_login"
-                app:destination="@id/login"/>
-            <action
-                android:id="@+id/action_welcome_to_register"
-                app:enterAnim="@anim/slide_in_right"
-                app:exitAnim="@anim/slide_out_left"
-                app:popEnterAnim="@anim/slide_in_left"
-                app:popExitAnim="@anim/slide_out_right"
-                app:destination="@id/register"/>
-        </fragment>
-    
-        <fragment
-            android:id="@+id/register">
-    
-            <argument
-                android:name="EMAIL"
-                android:defaultValue="2005@qq.com"
-                app:argType="string"/>
-        </fragment>
-    </navigation>
-    ```
-    - action标签
-        - app:destination	跳转完成到达的fragment的Id
-        - app:popUpTo	将fragment从栈中弹出，直到某个Id的fragment
-    - argument标签
-        - android:name	标签名字
-        - app:argType	标签的类型
-        - android:defaultValue	默认值
+- action标签
+    - app:destination	跳转完成到达的fragment的Id
+    - app:popUpTo	将fragment从栈中弹出，直到某个Id的fragment
+- argument标签
+    - android:name	标签名字
+    - app:argType	标签的类型
+    - android:defaultValue	默认值
 - WelcomeFragment中的JOIN US按钮点击事件：
     ```
     btnRegister.setOnClickListener {
@@ -179,49 +110,184 @@
 
 
 
+### 04.Navigation深度理解
+- 先思考这样一个问题：**如果让我们实现一个Fragment的导航库，首先要实现什么？**
+
+
+
+#### 4.1 Navigation架构图
+- `NavGraphFragment`是什么：导航界面的容器
+    - 主要是承载fragment的一个容易，其实就是一个拓展fragment。
+- `nav_graph.xml`是什么：声明导航结构图
+    - `NavGraphFragment` **获取** 并 **解析** 完这个xml资源文件后，然后做逻辑处理
+- 一些标签的作用
+    - `action`标签是什么：声明导航的行为，比如id，通过id可以执行跳转到对应的页面；如果destination，声明行为导航的目的地
+    - `argument`标签是什么：跳转参数的设置，name表示参数key，argType表示参数类型，defaultValue表示默认值
+- NavController是什么：跳转导航页面的操作
+    - 通过调用navigate方法，跳转页面，相当于路由
+
+
+
+#### 4.3 NavGraphFragment
+- `NavGraphFragment`是什么：导航界面的容器
+    - 使用原生的API，想展示一个Fragment，我们首先也需要 **定义一个容器承载它**。以往，它可能是一个 **RelativeLayout** 或者 **FrameLayout**，而现在，它被替换成了 **NavGraphFragment**。
+
+这也就说明了，我们为什么要往Activity的layout文件中提前扔进去一个NavGraphFragment，因为我们需要导航的这些Fragment都展示在NavGraphFragment上面。
+
+实际上它做了什么呢？来看一下NavGraphFragment的onCreateView()方法：
+
+```Java
+    public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container,
+                             @Nullable Bundle savedInstanceState) {
+        FrameLayout frameLayout = new FrameLayout(inflater.getContext());
+        frameLayout.setId(getId());
+        return frameLayout;
+    }
+```
+NavGraphFragment内部实例化了一个FrameLayout, **作为ViewGroup的载体，导航并展示其它Fragment**。
+
+除此之外，你 **应当注意** 到在layout文件中，它还声明了另外两个属性：
+
+>  app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph_main"
+
+app:defaultNavHost="true"这个属性意味着你的NavGraphFragment将会 **拦截系统Back键的点击事件**（因为系统的back键会直接关闭Activity而非切换Fragment），你同时 **必须重写** Activity的 **onSupportNavigateUp()** 方法，类似这样：
+
+```Kotlin
+override fun onSupportNavigateUp()
+        = findNavController(R.id.nav_host_fragment).navigateUp()
+```
+app:navGraph="@navigation/nav_graph_main"这个属性就很好理解了，它会指向一个navigation_graph的xml文件,这之后，NavGraphFragment就会 **导航并展示对应的Fragment**。
+
+在我们使用Navigation的第一步，我们需要：
+
+>  **在Activity的布局文件中显示声明NavGraphFragment，并配置 app:defaultNavHost 和 app:navGraph属性**。
+
+#### 4.4 nav_graph.xml
+- `nav_graph.xml`是什么：声明导航结构图
+
+NavGraphFragment作为Activity导航的 **容器** ，然后，其 **app:navGraph** 属性指向一个navigation_graph的xml文件，以声明其 **导航的结构**。
+
+NavGraphFragment在 **获取** 并 **解析** 完这个xml资源文件后，它首先需要知道的是：
+
+> 类似APP的home界面，NavGraphFragment首先要导航到哪里?
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:startDestination="@id/page1Fragment">
+
+    <fragment
+        android:id="@+id/page1Fragment"
+        android:name="com.qingmei2.samplejetpack.ui.main.MainPage1Fragment"
+        android:label="fragment_page1"
+        tools:layout="@layout/fragment_main_page1">
+        <action
+            android:id="@+id/action_page2"
+            app:destination="@id/page2Fragment" />
+    </fragment>
+    //省略...
+</navigation>
+```
+
+在navigation的根节点下，我们需要处理这样一个属性：
+
+> app:startDestination="@id/page1Fragment"
+
+**Destination** 是一个很关键的单词，它的直译是 **目的地**。**app:startDestination**属性便是声明这个id对应的 **Destination** 会被作为 **默认布局** 加载到Activity中。这也就说明了，为什么我们的sample，默认会显示 **MainPage1Fragment**。
+
+现在，我们的app默认展示了MainPage1Fragment, 那么接下来，我们如何实现跳转逻辑的处理呢？
+
+
+
+#### 4.5 Action标签
+Action标签是什么：声明导航的行为
+
+我们声明了这样一个Action标签，这是一个 **导航的行为**：
+
+```xml
+<action
+    android:id="@+id/action_page2"
+    app:destination="@id/page2Fragment" />
+```
+**app:destination**的属性，声明了这个行为导航的 **destination（目的地）**，我们可以看到，它会指定跳转到 id 为 **page2Fragment** 的Fragment（也就是 **MainPage2Fragment**）。
+
+**android:id** 这个id作为Action唯一的 **标识**，在Fragment的某个点击事件中，我们通过id指向**对应的行为**，就像这样：
+
+```Kotlin
+btn.setOnClickListener {
+       //点击跳转page2Fragment
+       Navigation.findNavController(it).navigate(R.id.action_page2)
+}
+```
+此外，Navigation还提供了一个 **app:popUpTo** 属性，它的作用是声明**导航行为** 将 **返回到** id对应的Fragment，比如，直接从Page3 返回到 Page1。
+
+此外，Navigation 对导航行为还提供了 **转场动画** 的支持，它可以通过代码这样实现：
+
+```xml
+<action
+        android:id="@+id/confirmationAction"
+        app:destination="@id/confirmationFragment"
+        app:enterAnim="@anim/slide_in_right"
+        app:exitAnim="@anim/slide_out_left"
+        app:popEnterAnim="@anim/slide_in_left"
+        app:popExitAnim="@anim/slide_out_right" />
+```
+
+> 篇幅原因，这些anim的xml文件我并未展示在文中，如有需求，请参考[Sample代码](https://github.com/qingmei2/SampleNavigation)。
+
+其实Navigation 还提供了对Destination之间 **参数传递** 的支持，以及对SubNavigation标签的支持，以方便开发者在xml文件中 **复用fragment标签** ——甚至是对 **Deep Link** 的支持，但这些拓展功能本文不再叙述。
+
+### 4.Fragment：通过代码声明导航
+
+其实在3中我们已经讲解了导航代码的使用,我们以Page2为例，它包含了2个按钮，分别对应 **返回Page1** 和 **进入Page3** 两个事件：
+
+```
+btn.setOnClickListener {
+      Navigation.findNavController(it).navigateUp()
+}
+btn2.setOnClickListener {
+      Navigation.findNavController(it).navigate(R.id.action_page3)
+}
+```
+Navigation.findNavController(View) 返回了一个 **NavController** ,它是整个 **Navigation** 架构中 **最重要的核心类**，我们所有的导航行为都由 **NavController** 处理，这个我们后面再讲。
+
+我们通过获取 **NavController**，然后调用  NavController.navigate()方法进行导航。
+
+![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.37y62a1uqz8.png)
+
+我们更多情况下通过传入ActionId，指定对应的 **导航行为** ；同时可以通过传入Bundle以 **数据传递**；或者是再传入一个 **NavOptions**配置更多（比如 **转场动画**，它也可以通过这种方式进行代码的动态配置）。
+
+NavController.navigate()方法更多时候应用在 **向下导航** 或者 **指定向上导航**（比如Page3 直接返回 Page1，跳过返回Page2的这一步）；如果我们处理back事件，我们应该使用 **NavController.
+navigateUp()**。
+
+### 恭喜您，已经能够游刃有余的使用Navigation!
+
+恭喜您，您已对 **Navigation** 十分熟悉，并能通过熟练使用其 **暴露的API**，灵活地处理您应用中的 **页面导航** 行为。
+
+我美滋滋的在个人履历上填上了这样一条：
+
+* 熟练使用Google官方组件Navigation实现Fragment的管理，并掌握其原理
+
+面试官对此十分感动，然后让我谈谈 **对它架构设计的一些个人观点**。
+
+![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.5m727974xxi.png)
+
+到了这一步，我们算得上是 **API的搬运工** ，我们已经 **了解每一个类的职责**，还没有完全 **理解框架设计者的思想**。
 
 
 
 
-![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.2bandw71i6u.png)
-
-这件事立即被我列上日程，过去的一周，我闲暇之际仔细研究了 **Navigation**, 并略有心得，我尝试写下本文，在总结的同时，希望能够给后来的朋友们一些 **系统性的指导建议** 。如果可能，我甚至希望这篇文章能够做到:
-
-> 本文不是详细的API说明文档，但仅通过阅读本文，能够对 **Navigation** 有一个系统性地学习—— **了解它，理解它，最后搞懂它**。
-
-这对读写双方都是 **一次挑战**。完成它的第一步是做到：知道Navigation这个导航组件 **怎么用**。
-
-## 了解Navigation
-
-### 1.官方文档
-
-**[官方文档](https://developer.android.com/topic/libraries/architecture/navigation/)** 永远是最接近 **正确** 和 **核心理念** 的参考资料 —— 在不久之后，本文可能会因为框架本身API的迭代更新而 **毫无意义**，但官方文档不会，即使在最恶劣的风暴中，它依然是最可靠的 **指明灯**：
-
-https://developer.android.com/topic/libraries/architecture/navigation/
-
-其次，一个好的Demo能够起到重要的启发作用， 这里我推荐 [Google实验室](https://github.com/googlecodelabs) 的这个Sample:
-
-项目地址：https://github.com/googlecodelabs/android-navigation
-项目教程：https://codelabs.developers.google.com/codelabs/android-navigation/#0
-
-这个教程Demo的优势在于，官方为这个Demo提供了 **一系列详细的教程**，通过一步步，引导学习每一个类或者组件的应用场景，最终完全上手 **Navigation**。
-
-> 因为刚刚发布的原因，目前Navigation的中文教程 **极其匮乏**，许多资料的查阅可能需要开发者 **自备梯子**。不过请不必担心，本文会力争做到比其它同类文章讲解的 **更加全面**。
-
-### 2.Sample展示
-
-我写了一个Navigation的sample，它最终的效果是这样：
-
-![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/1.uk3ey07tjvt.gif)
 
 
-这是3个简单的Fragment之间跳转的情景，经过 **转场动画** 的修饰，它们之前的切换非常 **流畅** 且 **自然**。在展示的最后，我们可以看到，Fragment2 -> Fragment1的时候，实际上是由 用户 **点击手机Back键** 触发的。
 
-项目结构图如下，这可以帮你尽快了解sample的结构：
 
-![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.h7ac21gg9i.png)
 
-> 我把这个sample的源码托管在了我的github上，你可以通过 [点我查看源码](https://github.com/qingmei2/SampleNavigation) 。
+
+
+
 
 ### 3.尝试使用Navigation
 
@@ -424,168 +490,7 @@ class MainPage3Fragment : Fragment() {
 
 > 到这里，Navigation最基本的使用就已经讲解完毕了。您可以通过运行预览和示例 **基本一致** 的效果，如果遇到问题，或者有疑问，可以[点我查看源码](https://github.com/qingmei2/SampleNavigation) 。
 
-## 理解Navigation
 
-我对于 **通过博客归纳总结** 的学习方式已近两年，我不断反思，一篇优秀的文章不仅是做到 **完整叙述**，同时，它更应该体现的是 **对思路的整理** 并 **简洁干净地阐述它们**。
-
-做到这点并不容易，首先需要做到的就是 **不要仅局限于API的使用**——最初的学习中，通过上面的代码，我已经 **实现了Fragment的导航**。但是，上面的代码中，除了Activity 和 Fragment，其它的东西我一个都不认识。
-
-我感觉很难受， 所谓 **行百里路半九十**，别说九十，这个Navigation，**我一窍不通**。
-
-![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.4u66wy2ib9u.png)
-
-**仅有上述示例代码毫无意义**，通过它们，更应该将其理解为 **入门**；接下来我们需要做到 **了解每一个类的职责，理解框架设计者的思想**。
-
-我们先思考这样一个问题：**如果让我们实现一个Fragment的导航库，首先要实现什么？**
-
-### 1.NavGraphFragment：导航界面的容器
-
-答案近在眼前。
-
-即使我们使用原生的API，想展示一个Fragment，我们首先也需要 **定义一个容器承载它**。以往，它可能是一个 **RelativeLayout** 或者 **FrameLayout**，而现在，它被替换成了 **NavGraphFragment**。
-
-这也就说明了，我们为什么要往Activity的layout文件中提前扔进去一个NavGraphFragment，因为我们需要导航的这些Fragment都展示在NavGraphFragment上面。
-
-实际上它做了什么呢？来看一下NavGraphFragment的onCreateView()方法：
-
-```Java
-    public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container,
-                             @Nullable Bundle savedInstanceState) {
-        FrameLayout frameLayout = new FrameLayout(inflater.getContext());
-        frameLayout.setId(getId());
-        return frameLayout;
-    }
-```
-NavGraphFragment内部实例化了一个FrameLayout, **作为ViewGroup的载体，导航并展示其它Fragment**。
-
-除此之外，你 **应当注意** 到在layout文件中，它还声明了另外两个属性：
-
->  app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph_main"
-
-app:defaultNavHost="true"这个属性意味着你的NavGraphFragment将会 **拦截系统Back键的点击事件**（因为系统的back键会直接关闭Activity而非切换Fragment），你同时 **必须重写** Activity的 **onSupportNavigateUp()** 方法，类似这样：
-
-```Kotlin
-override fun onSupportNavigateUp()
-        = findNavController(R.id.nav_host_fragment).navigateUp()
-```
-app:navGraph="@navigation/nav_graph_main"这个属性就很好理解了，它会指向一个navigation_graph的xml文件,这之后，NavGraphFragment就会 **导航并展示对应的Fragment**。
-
-在我们使用Navigation的第一步，我们需要：
-
->  **在Activity的布局文件中显示声明NavGraphFragment，并配置 app:defaultNavHost 和 app:navGraph属性**。
-
-### 2.nav_graph.xml：声明导航结构图
-
-NavGraphFragment作为Activity导航的 **容器** ，然后，其 **app:navGraph** 属性指向一个navigation_graph的xml文件，以声明其 **导航的结构**。
-
-NavGraphFragment在 **获取** 并 **解析** 完这个xml资源文件后，它首先需要知道的是：
-
-> 类似APP的home界面，NavGraphFragment首先要导航到哪里?
-
-```xml
-<?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/page1Fragment">
-
-    <fragment
-        android:id="@+id/page1Fragment"
-        android:name="com.qingmei2.samplejetpack.ui.main.MainPage1Fragment"
-        android:label="fragment_page1"
-        tools:layout="@layout/fragment_main_page1">
-        <action
-            android:id="@+id/action_page2"
-            app:destination="@id/page2Fragment" />
-    </fragment>
-    //省略...
-</navigation>
-```
-
-在navigation的根节点下，我们需要处理这样一个属性：
-
-> app:startDestination="@id/page1Fragment"
-
-**Destination** 是一个很关键的单词，它的直译是 **目的地**。**app:startDestination**属性便是声明这个id对应的 **Destination** 会被作为 **默认布局** 加载到Activity中。这也就说明了，为什么我们的sample，默认会显示 **MainPage1Fragment**。
-
-现在，我们的app默认展示了MainPage1Fragment, 那么接下来，我们如何实现跳转逻辑的处理呢？
-
-
-
-### 3.Action标签：声明导航的行为
-
-我们声明了这样一个Action标签，这是一个 **导航的行为**：
-
-```xml
-<action
-    android:id="@+id/action_page2"
-    app:destination="@id/page2Fragment" />
-```
-**app:destination**的属性，声明了这个行为导航的 **destination（目的地）**，我们可以看到，它会指定跳转到 id 为 **page2Fragment** 的Fragment（也就是 **MainPage2Fragment**）。
-
-**android:id** 这个id作为Action唯一的 **标识**，在Fragment的某个点击事件中，我们通过id指向**对应的行为**，就像这样：
-
-```Kotlin
-btn.setOnClickListener {
-       //点击跳转page2Fragment
-       Navigation.findNavController(it).navigate(R.id.action_page2)
-}
-```
-此外，Navigation还提供了一个 **app:popUpTo** 属性，它的作用是声明**导航行为** 将 **返回到** id对应的Fragment，比如，直接从Page3 返回到 Page1。
-
-此外，Navigation 对导航行为还提供了 **转场动画** 的支持，它可以通过代码这样实现：
-
-```xml
-<action
-        android:id="@+id/confirmationAction"
-        app:destination="@id/confirmationFragment"
-        app:enterAnim="@anim/slide_in_right"
-        app:exitAnim="@anim/slide_out_left"
-        app:popEnterAnim="@anim/slide_in_left"
-        app:popExitAnim="@anim/slide_out_right" />
-```
-
-> 篇幅原因，这些anim的xml文件我并未展示在文中，如有需求，请参考[Sample代码](https://github.com/qingmei2/SampleNavigation)。
-
-其实Navigation 还提供了对Destination之间 **参数传递** 的支持，以及对SubNavigation标签的支持，以方便开发者在xml文件中 **复用fragment标签** ——甚至是对 **Deep Link** 的支持，但这些拓展功能本文不再叙述。
-
-### 4.Fragment：通过代码声明导航
-
-其实在3中我们已经讲解了导航代码的使用,我们以Page2为例，它包含了2个按钮，分别对应 **返回Page1** 和 **进入Page3** 两个事件：
-
-```
-btn.setOnClickListener {
-      Navigation.findNavController(it).navigateUp()
-}
-btn2.setOnClickListener {
-      Navigation.findNavController(it).navigate(R.id.action_page3)
-}
-```
-Navigation.findNavController(View) 返回了一个 **NavController** ,它是整个 **Navigation** 架构中 **最重要的核心类**，我们所有的导航行为都由 **NavController** 处理，这个我们后面再讲。
-
-我们通过获取 **NavController**，然后调用  NavController.navigate()方法进行导航。
-
-![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.37y62a1uqz8.png)
-
-我们更多情况下通过传入ActionId，指定对应的 **导航行为** ；同时可以通过传入Bundle以 **数据传递**；或者是再传入一个 **NavOptions**配置更多（比如 **转场动画**，它也可以通过这种方式进行代码的动态配置）。
-
-NavController.navigate()方法更多时候应用在 **向下导航** 或者 **指定向上导航**（比如Page3 直接返回 Page1，跳过返回Page2的这一步）；如果我们处理back事件，我们应该使用 **NavController.
-navigateUp()**。
-
-### 恭喜您，已经能够游刃有余的使用Navigation!
-
-恭喜您，您已对 **Navigation** 十分熟悉，并能通过熟练使用其 **暴露的API**，灵活地处理您应用中的 **页面导航** 行为。
-
-我美滋滋的在个人履历上填上了这样一条：
-
-* 熟练使用Google官方组件Navigation实现Fragment的管理，并掌握其原理
-
-面试官对此十分感动，然后让我谈谈 **对它架构设计的一些个人观点**。
-
-![](https://raw.githubusercontent.com/qingmei2/qingmei2-blogs-art/master/android/jetpack/navigation/image.5m727974xxi.png)
-
-到了这一步，我们算得上是 **API的搬运工** ，我们已经 **了解每一个类的职责**，还没有完全 **理解框架设计者的思想**。
 
 ## 彻底搞懂Navigation
 
