--- a/Read/ReadKotlinWiki/01.基础语法/01.Kotlin基本语法介绍.md
+++ b/Read/ReadKotlinWiki/01.基础语法/01.Kotlin基本语法介绍.md
@@ -11,12 +11,12 @@
     - 4.1 关于空安全
     - 4.2 ?.和!!.和?=各自的含义
     - 4.3 ?:的含义
-- 05.修饰符
-    - 5.1 public
-    - 5.2 protected
-    - 5.3 private
-    - 5.4 internal
-    - 5.5 final和oepn
+- 05.条件循环和区间
+    - 01.If表达式
+    - 02.When表达式
+    - 03.for循环
+    - 04.While 和 do/while 循环
+    - 05.Ranges
 - 06.运算符重载
     - 6.1 一元操作符
     - 6.2 二元操作符
@@ -58,25 +58,6 @@
         ```
         point.x = 30
         point.y = 30
-        ```
-- 使用`lateinit var`，可以使得变量的初始化可以延迟到需要的时候
-    - 比如在使用dagger的时候，需要inject,如下
-        - @Inject lateinit var mPresenter: MapHomePresent
-    - 但是需要慎用lateinit, 因为你可能后面忘记了初始化，但是编译器又不会报错提醒。只有运行之后才会检测到，如下
-        ```
-        fun main(args: Array<String>) {
-            var test = Test()
-            println(test.a)
-        }
-        
-        class Test {
-            lateinit var a: String
-        }
-        ```
-    - 会报错如下：
-        ```
-        Exception in thread "main" kotlin.UninitializedPropertyAccessException:
-        lateinit property a has not been initialized
         ```
 
 
@@ -207,76 +188,175 @@
     ```
 
 
-### 05.修饰符
-#### 5.1 public
-- public 修饰符是限制级最低的修饰符，是默认的修饰符。如果一个定义为 public  的成员被包含在一个 private  修饰的类中，那么这个成员在这个类以外也是不可见的
+### 05.条件循环和区间
 
 
-#### 5.2 protected
-- protected 修饰符只能被用在类或者接口中的成员上。在 Java 中，可以从同一个包中访问一个 protected 的成员，但对于 Kotlin 来说，protected 成员只在类和它的子类中可见
-
-
-#### 5.3 private
-- private  修饰符是限制级最高的修饰符，Kotlin 允许在顶层声明中使用 private 可见性，包括类、函数和属性，这表示只在自己所在的文件中可见，所以如果将一个类声明为 private，就不能在定义这个类之外的地方中使用它。此外，如果在一个类里面使用了 private  修饰符，那访问权限就被限制在这个类里面，继承这个类的子类也不能使用它。所以如果类、对象、接口等被定义为 private，那么它们只对被定义所在的文件可见。如果被定义在了类或者接口中，那它们只对这个类或者接口可见
-
-
-#### 5.4 internal
-
-如果是一个定义为 internal  的包成员的话，对所在的整个 module  可见。如果它是一个其它领域的成员，它就需要依赖那个领域的可见性了。比如，如果我们写了一个 private  类，那么它的 internal  修饰的函数的可见性就会限制于它所在的这个类的可见性。
-我们可以访问同一个 module  中的 internal  修饰的类，但是不能访问其它 module  的
-
-
-
-#### 5.5 final和oepn
-- Kotlin 中的类和方法默认都是 final 的，即不可继承的，如果想允许创建一个类的子类，需要使用 open 修饰符来标识这个类，此外，也需要为每一个希望被重写的属性和方法添加 open 修饰符
+#### 5.1 If 表达式
+- if 的分支可以是代码块，最后的表达式作为该块的值
+    ```kotlin
+    val maxValue = if (20 > 10) {
+        println("maxValue is 20")
+        20
+    } else {
+        println("maxValue is 10")
+        10
+    }
+    println(maxValue) //20
     ```
-    open class View {
-        open fun click() {
-    
-        }
-    	//不能在子类中被重写
-        fun longClick() {
-    
-        }
+- 以下代码可以显示地看出 if 的返回值
+    ```kotlin
+    val list = listOf(1, 4, 10, 4, 10, 30)
+    val value = if (list.size > 0) list.size else null
+    println(value)  //6
+    ```
+- 如果 if 表达式分支是用于执行某个命令，那么此时的返回值类型就是 Unit ，此时的 if 语句就看起来和 Java 的一样了
+    ```kotlin
+    val value1 = if (list.size > 0) println("1") else println("2")
+    println(value1.javaClass)   //class kotlin.Unit
+    ```
+- 如果将 if 作为表达式而不是语句（例如：返回它的值或者把它赋给变量），该表达式需要有 else 分支
+
+
+
+#### 5.2 When表达式
+- when 表达式与 Java 中的 switch/case 类似，但是要强大得多。
+    - when 既可以被当做表达式使用也可以被当做语句使用，when 将参数和所有的分支条件顺序比较直到某个分支满足条件，然后它会运行右边的表达式
+    - 如果 when 被当做表达式来使用，符合条件的分支的值就是整个表达式的值，如果当做语句使用， 则忽略个别分支的值。与 Java 的 switch/case 不同之处是 When 表达式的参数可以是任何类型，并且分支也可以是一个条件
+    - 和 if 一样，When 每一个分支可以是一个代码块，它的值是代码块中最后的表达式的值，如果其它分支都不满足条件将会求值于 else 分支
+    - 如果 when 作为一个表达式使用，则必须有 else 分支， 除非编译器能够检测出所有的可能情况都已经覆盖了
+    - 如果很多分支需要用相同的方式处理，则可以把多个分支条件放在一起，用逗号分隔
+    ``` kotlin
+    val value = 2
+    when (value) {
+        in 4..9 -> println("in 4..9") //区间判断
+        3 -> println("value is 3")    //相等性判断
+        2, 6 -> println("value is 2 or 6")    //多值相等性判断
+        is Int -> println("is Int")   //类型判断
+        else -> println("else")       //如果以上条件都不满足，则执行 else
     }
     
-    class Button : View() {
-        override fun click() {
-            super.click()
-        }
-    }
-    ```
-- 如果重写了一个基类或者接口的成员，重写了的成员同样默认是 open 的。例如，如果 Button 类是 open 的，则其子类也可以重写其 click() 方法
-    ```
-    open class Button : View() {
-        override fun click() {
-            super.click()
-        }
+    fun main(args: Array<String>) {
+        fun parser(obj: Any): String =
+                when (obj) {
+                    1 -> "value is 1"
+                    "4" -> "value is string 4"
+                    is Long -> "value type is long"
+                    else -> "unknown"
+                }
+        println(parser(1))
+        println(parser(1L))
+        println(parser("4"))
+        println(parser(100L))
+        println(parser(100.0))
     }
     
-    class CompatButton : Button() {
-        override fun click() {
-            super.click()
-        }
+    
+    value is 1
+    value type is long
+    value is string 4
+    value type is long
+    unknown
+    ```
+- 此外，When 循环也可以不带参数
+    ``` kotlin
+    when {
+        1 > 5 -> println("1 > 5")
+        3 > 1 -> println("3 > 1")
     }
     ```
-- 如果想要类的子类重写该方法的实现，可以显式地将重写的成员标记为 final
-    ```
-    open class Button : View() {
-        override final fun click() {
-            super.click()
-        }
+
+
+#### 5.3 for循环
+- 和 Java 中的 for 循环最为类似的形式是
+    ```kotlin
+    val list = listOf(1, 4, 10, 34, 10)
+    for (value in list) {
+        println(value)
     }
     ```
-- 如下所示
-    | 修饰符         | 类成员       | 顶层声明     |
-    | -------------- | ------------ | ------------ |
-    | public（默认） | 所有地方可见 | 所有地方可见 |
-    | internal       | 模块中可见   | 模块中可见   |
-    | protected      | 子类中可见   |              |
-    | private        | 类中可见     | 文件中可见   |
+- 通过索引来遍历
+    ```kotlin
+    val items = listOf("H", "e", "l", "l", "o")
+    //通过索引来遍历List
+    for (index in items.indices) {
+        println("${index}对应的值是：${items[index]}")
+    }
+    ```
+- 也可以在每次循环中获取当前索引和相应的值
+    ```kotlin
+    val list = listOf(1, 4, 10, 34, 10)
+    for ((index, value) in list.withIndex()) {
+        println("index : $index , value :$value")
+    }
+    ```
+- 也可以自定义循环区间
+    ```kotlin
+    for (index in 2..10) {
+        println(index)
+    }
+    ```
 
 
+
+#### 5.4 While 和 do/while 循环
+- While 和 do/while 和 Java 中的区别不大
+    ```kotlin
+    val list = listOf(1, 4, 15, 2, 4, 10, 0, 9)
+    var index = 0
+    while (index < list.size) {
+        println(list[index])
+        index++
+    }
+    
+    val list = listOf(1, 4, 15, 2, 4, 10, 0, 9)
+    var index = 0
+    do {
+        println(list[index])
+        index++
+    } while (index < list.size)
+    ```
+
+
+#### 5.5 Ranges
+- Ranges 表达式使用一个 ..  操作符来声明一个闭区间，它是被定义实现了一个 RangTo  方法
+- 以下两种声明形式是等价了
+    ```kotlin
+    var index = 5
+    if (index >= 0 && index <= 10) {
+    
+    }
+    if (index in 0..10) {
+    
+    }
+    ```
+- 数字类型的 ranges 在被迭代时，编译器会将它们转换为与 Java 中使用 index 的 for 循环的相同字节码的方式来进行优化
+    - Ranges 默认会自增长，所以如果像以下的代码就不会被执行
+    ```kotlin
+    for (index in 10..0) {
+        println(index)
+    }
+    ```
+    - 可以改用 downTo 函数来将之改为递减
+    ```kotlin
+    for (index in 10 downTo 0) {
+        println(index)
+    }
+    ```
+    - 可以在 ranges 中使用 step 来定义每次循环递增或递增的长度：
+    ```kotlin
+    for (index in 1..8 step 2){
+        println(index)
+    }
+    for (index in 8 downTo 1 step 2) {
+        println(index)
+    }
+    ```
+- 以上声明的都是闭区间，如果想声明的是开区间，可以使用 until 函数：
+    ```kotlin
+    for (index in 0 until 4){
+        println(index)
+    }
+    ```
 
 
 
