--- a/Read/ReadKotlinWiki/02.高阶拓展/02.扩展函数和属性.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/02.扩展函数和属性.md
@@ -8,6 +8,7 @@
 
 
 
+
 ### 01.高阶扩展函数概念
 - kotlin官方文档也有这样一段话描述扩展：
     - Kotlin 能够对一个类扩展新功能而无需继承该类或者使用像装饰者这样的设计模式。 这通过叫做扩展的特殊声明完成。
@@ -52,22 +53,36 @@
     ```
 
 
-### 04.apply函数理解
-- 首先看下源代码
-    - 可以理解为T类型扩展一个入参为空，返回值为空的函数，这样我们就可以在传入的函数内部，也就是apply闭包内访问T中的成员。
-    ```
-    @kotlin.internal.InlineOnly
-    public inline fun <T> T.apply(block: T.() -> Unit): T {
-        contract {
-            callsInPlace(block, InvocationKind.EXACTLY_ONCE)
-        }
-        block()
-        return this
-    }
-    ```
+
+### 05.Standard.kt拓展函数
+#### 5.1 了解定义作用和场景
+- 有哪些比较常用拓展函数
+    - run、with、let、also与apply
+- 定义是什么
+    - 一个作用域函数
+- 作用是什么
+    - 定义一个变量在特定的作用区域范围内，避免一些null判断的操作
+- 应用场景说明
+    - 明确一个变量所处特定的作用区范围内可以用，针对null统一做非空判断逻辑
 
 
-### 05.let函数理解
+#### 5.2 每个函数的作用
+- let函数
+    - let()的定义是这样的，默认当前这个对象作为闭包的it参数，返回值是函数里面最后一行，或者指定return
+- also函数
+    - 类似let函数，但区别在于返回值，返回值 = 传入的对象的本身
+- with函数
+    - 调用同一个对象的多个方法 / 属性时，可以省去对象名重复，直接调用方法名 / 属性即可
+    - 应用场景：需要调用同一个对象的多个方法 / 属性
+- run函数
+    - 结合了let、with两个函数的作用，即：      
+    - 调用同一个对象的多个方法 / 属性时，可以省去对象名重复，直接调用方法名 / 属性即可
+    - 定义一个变量在特定作用域内
+    - 统一做判空处理
+- apply函数
+    - 与run函数类似，但区别在于返回值：run函数返回最后一行的值 / 表达式，apply函数返回传入的对象的本身
+    - 应用场景：对象实例初始化时需要对对象中的属性进行赋值 & 返回该对象
+
 
 
 
