--- a/Read/ReadKotlinWiki/18.懒加载初始化.md
+++ b/Read/ReadKotlinWiki/18.懒加载初始化.md
@@ -71,6 +71,23 @@
 - `lateinit var`只能用来修饰类属性
     - 不能用来修饰局部变量，并且只能用来修饰对象，不能用来修饰基本类型(因为基本类型的属性在类加载后的准备阶段都会被初始化为默认值)。
 - `lateinit var`的作用也比较简单，就是让编译期在检查时不要因为属性变量未被初始化而报错。
+- 使用`lateinit var`，可以使得变量的初始化可以延迟到需要的时候
+    - 但是需要慎用lateinit, 因为你可能后面忘记了初始化，但是编译器又不会报错提醒。只有运行之后才会检测到，如下
+        ```
+        fun main(args: Array<String>) {
+            var test = Test()
+            println(test.a)
+        }
+        
+        class Test {
+            lateinit var a: String
+        }
+        ```
+    - 会报错如下：
+        ```
+        Exception in thread "main" kotlin.UninitializedPropertyAccessException:
+        lateinit property a has not been initialized
+        ```
 
 
 #### 1.2 注意问题
