--- a/Read/ReadShareWiki/07.底层思维/01.做事专注的锻炼.md
+++ b/Read/ReadShareWiki/07.底层思维/01.做事专注的锻炼.md
@@ -1,27 +1,28 @@
 #### 目录介绍
-- 01.认知启蒙的CEO
+- 01.什么是专注能力
 - 02.打破专注力迷思
 - 03.需要注意几方面
 - 04.专注力的大天灾
-- 06.提高专注力方式
-- 07.磨蹭对抗专注力
-- 08.多动非专注不足
+- 05.提高专注力方式
+- 06.磨蹭对抗专注力
+- 07.多动非专注不足
 
 
 
 
-### 01.认知启蒙的CEO
-- 执行能力可以指挥我们的大脑调用之前的知识，过滤干扰，然后完成指定任务。执行能力是任命、掌管大脑的“CEO”。
-- 如果把大脑看作一个公司，那么各种能力，包括情商的培养，语言能力、逻辑能力的开发等，充其量是各个支持部门。每个部门都很重要，但要让公司运营得好，最关键的是要有CEO抓全局，好的CEO能让各个部门各司其职，让公司的潜力得到最大限度发挥。哈佛大学把执行能力比喻为“空中交通管制系统”，这个总调度、总指挥的比喻特别形象。
-- 要在学业或者事业上成功，光知道“是什么”是不够的，还要学以致用。不仅要学以致用，还要会用相对应的行为和技能来配合完成任务。
-
-
+### 01.什么是专注能力
+- 专注力是人们进行活动时的心理状态，心理活动朝向某一事物，有选择地接受信息，抑制其他活动和信息。当一个人专注时，精神饱满，做事效率高，情绪积极，身体也会感到非常地舒适，不会轻易受到周围环境的影响。
 
 
 ### 02.打破专注力迷思
-- 小时候，老师批评差生时常说：“这个学生注意力不集中，上课不认真听讲。”似乎专注力好的孩子，就和好学生画等号。我们在这种环境下长大，所以会非常自然地十分关注专注力。
+#### 2.1 学生时代的专注力
+- 小时候读书，老师批评差生时常说：“这个学生注意力不集中，上课不认真听讲。”似乎专注力好的孩子，就和好学生画等号。在这种环境下长大，所以会非常自然地十分关注专注力。
 - 专注力的培养，是从非常短的时间开始，后来慢慢提高的。而且专注力的培养不是单一维度，它跟自控力、思考能力等都是紧密结合的。那么，专注力有没有测量的标准呢？其实是有的。
-- 区分“不专注”还是“没兴趣”。基于这个大前提，有两件事情大家需要区分：到底是“不专注”，还是“没兴趣”？很难做到“觉得虽然没兴趣、不喜欢，但这是我必须做的，这是我的责任，或者这会对我好”。只要对一两项感兴趣的事情很专注，并符合专注时间的最低要求，甚至比它更长，这就说明专注力是没有问题的。
+
+
+#### 2.2 区分不专注和没兴趣
+- 区分“不专注”还是“没兴趣”。基于这个大前提，有两件事情大家需要区分：到底是“不专注”，还是“没兴趣”？
+- 只要对一两项感兴趣的事情很专注，并符合专注时间的最低要求，甚至比它更长，这就说明专注力是没有问题的。
 
 
 
@@ -33,23 +34,49 @@
 
 
 ### 04.专注力的大天灾
+#### 4.1 打造环境少干扰
 - 环境不友好。举一个简单的例子，可能我们都经历过，在我们读书的时代，有时候做作业，但是旁边却放电视剧，电视作为“背景音乐”一直存在，可是我们却指望专心写作业，这就是环境不友好，人为地在工作环境里制造了一些分散注意力的因素。
 - 一边工作一边玩手机或看电视。研究指出，一边工作一边看电视、看视频，对发展专注力有很大危害。有些误区，认为对着电视半天一动不动，就说明专注力很强，其实不是。这种状态下，没有主动调用控制专注力的肌肉群，而是呈现一种刺激过度的状态。
 
 
+#### 4.2 让一些干扰因素远离
+- 有时候不是我们意志不坚定，而是“敌人”太狡猾。如果我们面前摆放着手机、平板、零食等，那么我们的注意力是不是很容易就被它们吸引走了呢？
+- 所以，把这些能影响学习的物品搬离我们的视线，当只有学习任务时，我们会更容易进入专注的状态。
 
-### 06.提高专注力方式
+
+#### 4.3 减少烦恼干扰
+- 学习目标很明确，学习桌也及时清空了杂物，但是内心却没有清空。内心的烦恼，导致自己在学习时无法专心。
+- 这时，我们可以把烦恼进行分类，如果是急需解决的事情干扰我们的状态，可以先停下来处理事情，或者寻求家长的帮助。如果是为未来担心，比如担心作业写不完、成绩退步等，这些烦恼会徒增焦虑。
+- 或者把令我们烦恼的事情写下来，用自己喜欢又能接受的方式，寄存在自己的秘密空间里，让它暂时不来困扰自己，等自己更有力量或更有闲情时，再进行处理。
+
+
+### 05.提高专注力方式
 - 怎么做才能不仅保护专注力，还能更好地促进专注力的培养？第一，是“有准备的环境”，具体分为以下几方面。
 
 
+#### 5.1 分解大目标小任务
+- 分解大目标小任务。有时候脑海里充斥着杂乱的想法，很容易三心二意。因此需要明确任务目标，把专注力集中在目标上，减少其他事物对学习的影响。
+- 当学习目标比较大时，将学习任务进行分解，把大目标分为一个个小目标一步一步完成。
 
-### 07.磨蹭对抗专注力
+
+#### 5.2 给任务设定⌚️
+- 给自己设定最后期限。一旦有了时间压力的意识，会使大脑和行动活动更加敏捷。
+- 有时候学习任务比较多，可以在书桌醒目处贴便利贴，进行自我提醒或自我鼓励。在完成目标之后，比如在目标上打勾。
+
+
+#### 5.3 及时奖励专注力
+- 及时奖励专注力。当达成专注力目标时，不妨及时给自己一些小小的奖励，表扬和鼓励有助于下次专注的好心情。
+- 奖励自己一袋小零食等，自我肯定可以帮助培养我们的成就感和自信心。
+
+
+### 06.磨蹭对抗专注力
 - 很多人会把磨蹭、拖拉、听不进话归咎于专注力不够好。在此，想单独把这个话题拿出来跟大家分享一下，这里主要想说4点。
-- 是真的慢，还是拖拉。在我们眼中，“拖拉”其实是相对的。但是，处在不断地学习中，处于学习的成长曲线上，所以需要花时间去体验一切习以为常的活动。做事慢一点没关系，最重要是要吸收，输出结果。换句话说，拖拉、磨蹭对谁造成了影响？如果拖拉影响了自己上班，参加活动，并会给自己带来影响的话，那么就会为自己的行为着急。如果是对别人有影响，对自己无事，那么不能说不专注。
+- 是真的慢，还是拖拉。在我们眼中，“拖拉”其实是相对的。但是，处在不断地学习中，处于学习的成长曲线上，所以需要花时间去体验一切习以为常的活动。
+- 做事慢一点没关系，最重要是要吸收，输出结果。换句话说，拖拉、磨蹭对谁造成了影响？如果拖拉影响了自己上班，参加活动，并会给自己带来影响的话，那么就会为自己的行为着急。如果是对别人有影响，对自己无事，那么不能说不专注。
 
 
 
-### 08.多动非专注不足
+### 07.多动非专注不足
 - 发展是多维度的，比如社交、语言、运动、精细运动、认知等，每个阶段只能专注于某一个技能。当这个技能是他新获得的，会乐此不疲不断地重复。学习的方式就是通过不断地重复来强化，从而熟练掌握新技能的。
 - 在美国被判定为医学范畴内多动症的人，改善他们的方法并不是每天训练他们不动，而是让他们更多地去动。因为多动症的人，大多是肌肉耐力不够好导致坐不定。
 
